--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Bus Mall</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="reset.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
     </head>
     <body>
       <ul id="img_list">
-        <li><img id="img1"></li>
-        <li><img id="img2"></li>
-        <li><img id="img3"></li>
+        <li class="images"><img id="img1"></li>
+        <li class="images"><img id="img2"></li>
+        <li class="images"><img id="img3"></li>
       </ul>
+      <ul id="results_list"></ul>
     <script src="./js/app.js"></script>
 </body>
