--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
     </head>
     <body>
+      <canvas id="chart"></canvas>
       <ul id="img_list">
         <li class="images"><img id="img1"></li>
         <li class="images"><img id="img2"></li>
         <li class="images"><img id="img3"></li>
       </ul>
       <ul id="results_list"></ul>
+    <script src="./js/chart.js"></script>
     <script src="./js/app.js"></script>
 </body>
